changed from jdk25 to jdk17 for stabalizing ci pipeline
Signed-off-by: Dennis Grewe <dennis.grewe@hs-esslingen.de>